kubernetes/apps/observability/grafana/instance/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: internal
      dns:
        query-name: grafana.unscfleet.com
        query-type: A
      url: 1.1.1.1
      conditions:
        - len([BODY]) == 0
spec:
  hostnames:
    - grafana.unscfleet.com
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
